Added buttons and game board
Created the Start New Game Buttons and Cheat Mode buttons, which will
be linked to functionality later, and used bootstrap to create a 3X3
game board that will be used for the tic tac toe game.  Functionality
to come.

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -1,3 +1,26 @@
-.gameLabel {
+.game-label {
   margin-top: 5px;
+}
+
+.box {
+  border: 2px solid $black;
+  height: 125px;
+}
+
+.container-board {
+  margin-left: 5%;
+  margin-top: 75px;
+  width: 50%;
+}
+
+nav {
+  overflow: hidden;
+}
+
+.container {
+  width: 75%
+}
+
+.btn {
+  margin-top: 65px;
 }
