Added styles to drop down menu
Added padding to drop down menu

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -3,3 +3,7 @@ $black: #000;
 .game-label {
   font-family: 'Indie Flower', cursive;
 }
+
+.game-log {
+  font-family: 'Gloria Hallelujah', cursive;
+}
