Fixed layout by floating stats button to the right

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -95,11 +95,10 @@ navbar-fixed-top {
   margin-top: 100px;
 }
 
-<<<<<<< HEAD
 .statsContainer {
   float: right;
-=======
+}
+
 .game-log {
   margin-left: 20px;
->>>>>>> housekeeping
 }
