--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -1,4 +1,7 @@
 $black: #000;
+$btn-background: #aaceaa;
+$btn-color: #fffaaa;
+$white: #fff;
 
 .game-label {
   font-family: 'Indie Flower', cursive;
