--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -1,4 +1,49 @@
-.row-1 {
-  float: left;
+.row-top {
   margin-top: 100px;
+}
+
+.col-md-4 {
+}
+
+.getalbum {
+  width: 10%;
+}
+
+.make-album {
+  margin-left: 215px;
+  width: 75%;
+}
+
+.artist {
+  margin-left: 215px;
+}
+
+.song {
+  margin-left: 215px;
+}
+
+.midbar {
+  margin-left: 330px;
+}
+
+.get-artists {
+  margin-left: 50px;
+}
+
+.midbar {
+  width: 100%;
+}
+
+.show-artists {
+  clear :both;
+  text-align: center;
+  margin-top: 60px;
+}
+
+li {
+  text-decoration: none;
+}
+
+.artists li {
+  text-decoration: none;
 }
