Added Update button for each song to avoid sending song ID

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -3,44 +3,44 @@
   float: left
 }
 
-.midbar {
-  margin-left: 330px;
-}
+// .midbar {
+//   margin-left: 330px;
+// }
 
-.show-artists {
-  text-align: center;
-}
+// .show-artists {
+//   text-align: center;
+// }
 
 li {
   text-decoration: none;
 }
 
-.artists li {
-  text-decoration: none;
-}
+// .artists li {
+//   text-decoration: none;
+// }
 
 .row {
   float: left;
 }
 
-.makealbum {
-  float: left;
-  width: 100%;
-}
-
+// .makealbum {
+//   float: left;
+//   width: 100%;
+// }
+//
 .row2 {
   clear: both;
 }
 
-.getalbum {
-  width: 33%;
-  margin: 20px
-}
+// .getalbum {
+//   width: 33%;
+//   margin: 20px
+// }
 
-.get-artists {
-  width: 75%;
-  margin: 20px;
-}
+// .get-artists {
+//   width: 75%;
+//   margin: 20px;
+// }
 
 .songs {
   margin: 20px;
